--- a/src/app/layout/root/root.component.html
+++ b/src/app/layout/root/root.component.html
@@ -54,7 +54,7 @@
 
           <!--Scroll to top-->
           <button
-            [ngClass]="{ 'show-scroll': showScroll }"
+            [ngClass]="{ 'show-scroll': showScroll,'up': jumpFooter }"
             (click)="scrollToTop()"
             class="scroll-to-top"
           >
@@ -64,7 +64,7 @@
           <!-- view my plan -->
           <button mat-button matBadge="{{spots}}"
             (click)="togglecart()"
-            class="view-my-plan" [ngClass]="{'on':spots > 0}" disableRipple="true">
+            class="view-my-plan" [ngClass]="{'on':spots > 0,'up':jumpFooter}" disableRipple="true">
             <img src="{{viewbtn_src}}" alt="view my plan"/>
           </button>
         </div>
