--- a/src/app/layout/footer/footer.component.scss
+++ b/src/app/layout/footer/footer.component.scss
@@ -47,26 +47,28 @@ footer,
   padding-top: 19px;
   .col{
     flex-basis: 33%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    font-size: 10px;
-    color: #fff;
-    img.icon{
-      width: 28px;
-      -webkit-transition: 0.6s ease-out;
-      -moz-transition:  0.6s ease-out;
-      transition:  0.6s ease-out;
-      &:hover{
-        // -webkit-transform: rotateZ(720deg);
-        // -moz-transform: rotateZ(720deg);
-        // transform: rotateZ(720deg);
-        -webkit-transform: scale(1.2);
-        -moz-transform: scale(1.2);
-        transform: scale(1.2);
-        
+    
+    a{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      font-size: 10px;
+      color: #fff;
+      text-decoration: none;
+      img.icon{
+        width: 28px;
+        -webkit-transition: 0.6s ease-out;
+        -moz-transition:  0.6s ease-out;
+        transition:  0.6s ease-out;
+        &:hover{
+          -webkit-transform: scale(1.2);
+          -moz-transform: scale(1.2);
+          transform: scale(1.2);
+          
+        }
       }
     }
+    
     
   }
 }
