--- a/src/app/pages/planspot/planspot.component.html
+++ b/src/app/pages/planspot/planspot.component.html
@@ -19,6 +19,7 @@
     (linked)="linktoDetail($event)"
     (addMyPlan)="addMyPlan($event)"
     (setFav)="setFavorite($event)"
+    (keyword)="keywordSearch($event)"
   >
   </app-planspot-list-item>
 </app-planspot-list>
