--- a/src/app/layout/root/root.component.scss
+++ b/src/app/layout/root/root.component.scss
@@ -95,7 +95,7 @@ button {
     top:-6px;
     // background-color: #000;
     color: #fff;
-    background: url("../../../assets/img/icon_badge0.svg") no-repeat;
+    background: url("../../../assets/img/icon_badge.svg") no-repeat;
     width: 24px;
     height: 28px;
     line-height: 28px;
