--- a/src/app/pages/offcial/privacy/privacy.component.scss
+++ b/src/app/pages/offcial/privacy/privacy.component.scss
@@ -1,12 +1,15 @@
-h1{
-  text-align: center;
-  font-size: 24px;
-}
-
-dl,dd{
-  margin: unset;
-}
-
-.company{
-  font-size: 110%;
+#privacy{
+  min-height: calc(100vh - 170px);
+  h1{
+    text-align: center;
+    font-size: 24px;
+  }
+  
+  dl,dd{
+    margin: unset;
+  }
+  
+  .company{
+    font-size: 110%;
+  }
 }
