--- a/src/app/layout/root/root.component.scss
+++ b/src/app/layout/root/root.component.scss
@@ -173,3 +173,10 @@ mat-sidenav-content {
     }
   }
 }
+
+@media screen and (min-width: 1024px) { 
+  div.body{
+    width: 1024px;
+    margin: auto;
+  }
+}
