--- a/src/app/layout/header/header.component.scss
+++ b/src/app/layout/header/header.component.scss
@@ -41,7 +41,8 @@ header {
     margin-left: 16px;
   }
 
-  @media screen and (min-width: 415px) and (max-width: 1024px) { 
+  //@media screen and (min-width: 415px) and (max-width: 1024px) { 
+    @media screen and (min-width: 415px) { 
     .imgsp {
       margin-top: 1vw;
       margin-left: 16px;
