--- a/src/app/pages/planspot/components/planspot-list-item/planspot-list-item.component.scss
+++ b/src/app/pages/planspot/components/planspot-list-item/planspot-list-item.component.scss
@@ -783,8 +783,8 @@
   }
 }
 
-//@media screen and (min-width: 415px) and (max-width: 1024px) { 
-  @media screen and (min-width: 415px) { 
+@media screen and (min-width: 415px) and (max-width: 1024px) { 
+  //@media screen and (min-width: 415px) { 
   #planspot-list-item{
     width: calc(100%/2);
     float: left;
