--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -16,21 +16,21 @@
   </mat-nav-list> -->
   <div class='row public'>
     <div class='col about'>
-      <a (click)="linkto('about')">
+      <a routerLink="about">
         <img class="icon" src='../../../assets/img/icon_about.svg' alt='about'>
         <div>アバウト</div>
       </a>
     </div>
     <div class='col guide'>
-      <a (click)="linkto('guide')">
+      <a routerLink="guide">
         <img class="icon" src='../../../assets/img/icon_guide.svg' alt='guide'>
         <div>ガイド</div>
       </a>
     </div>
     <div class='col policy'>
-      <a (click)="linkto('privacy')">
+      <a routerLink="privacy">
         <img class="icon" src='../../../assets/img/icon_policy.svg' alt='policy'>
-        <div>プライバシーポリシー</div>
+        <div>プライバシー</div>
       </a>
     </div>
   </div>
