--- a/src/app/pages/myplan/myplan.component.html
+++ b/src/app/pages/myplan/myplan.component.html
@@ -454,7 +454,8 @@
               </div>
             </div>
             <div class="card-box">
-              <div class="card-header" (click)="linktoSpot(item)">
+              <!--div class="card-header" (click)="linktoSpot(item)"-->
+              <div class='card-header'>
                 <!-- 写真(複数枚) -->
                 <owl-carousel-o
                   *ngIf="item.previewPictures?.length > 1; else singlePict"
