--- a/src/app/pages/offcial/privacy/privacy.component.html
+++ b/src/app/pages/offcial/privacy/privacy.component.html
@@ -1,35 +1,138 @@
-<div class="box" id="privacy">
-    <mat-card>
-      <mat-card-content>
-      <h1>プライバシーポリシー</h1>
+<div class="box">
+  <mat-tab-group id="privacy">
+    <mat-tab label="プライバシーポリシー">
+      <mat-card>
+        <mat-card-content>
+          <h1>プライバシーポリシー</h1>
 
-      <p>弊社はお客様の個人情報をお預かりすることになりますが、そのお預かりした個人情報の取扱について、下記のように定め、保護に努めております。</p>
-      
-      <h4>【利用目的】</h4>
-      <dl>
-        <dd>1)お問い合わせに対する回答を行うため</dd>
-        <dd>2)会員登録管理及びサービスのご提供のため</dd>
-        <dd>3)弊社のサービス、催し物のご案内のため</dd>
-        <dd>4)料金請求、課金計算のため</dd>
-      </dl>
-      
-      <H4>【第三者への提供】</H4>
-      <p>お客様が弊社に届け出たID、ユーザー名、アイコン、自己紹介文その他登録基本情報は、本サービスのウェブサイト・アプリ上で弊社が定める期間公開されます｡</p>
-      
-      <h4>【個人情報の取扱い業務の委託】</h4>
-      <p>弊社は事業運営上、お客様により良いサービスを提供するために業務の一部を外部に委託しており、業務委託先に対してお客様の個人情報を預けることがあります。この場合、個人情報を適切に取り扱っていると認められる委託先を選定し、契約等において個人情報の適正管理・機密保持などによりお客様の個人情報の漏洩防止に必要な事項を取決め、適切な管理を実施させます。</p>
-      
-      <H4>【個人情報提出の任意性】</H4>
-      <p>お客様が弊社に対して個人情報を提出することは任意です。ただし、個人情報を提出されない場合には、弊社からの返信やサービスを実施ができない場合がありますので、あらかじめご了承ください。</p>
-      
-      <h4>【個人情報の開示請求について】</h4>
-      <p>お客様には、貴殿の個人情報の利用目的の通知、開示、訂正、追加、削除および利用又は提供の拒否権を要求する権利があります。詳細につきましては下記の窓口までご連絡ください。</p>
-      
-      <div class="company">
-        運営会社：株式会社リモージュ
-      </div>
-      
-    </mat-card-content>
-    </mat-card>
+          <p>弊社はお客様の個人情報をお預かりすることになりますが、そのお預かりした個人情報の取扱について、下記のように定め、保護に努めております。</p>
+
+          <h4>【利用目的】</h4>
+          <dl>
+            <dd>1)お問い合わせに対する回答を行うため</dd>
+            <dd>2)会員登録管理及びサービスのご提供のため</dd>
+            <dd>3)弊社のサービス、催し物のご案内のため</dd>
+            <dd>4)料金請求、課金計算のため</dd>
+          </dl>
+
+          <H4>【第三者への提供】</H4>
+          <p>お客様が弊社に届け出たID、ユーザー名、アイコン、自己紹介文その他登録基本情報は、本サービスのウェブサイト・アプリ上で弊社が定める期間公開されます｡</p>
+
+          <h4>【個人情報の取扱い業務の委託】</h4>
+          <p>
+            弊社は事業運営上、お客様により良いサービスを提供するために業務の一部を外部に委託しており、業務委託先に対してお客様の個人情報を預けることがあります。この場合、個人情報を適切に取り扱っていると認められる委託先を選定し、契約等において個人情報の適正管理・機密保持などによりお客様の個人情報の漏洩防止に必要な事項を取決め、適切な管理を実施させます。
+          </p>
+
+          <H4>【個人情報提出の任意性】</H4>
+          <p>お客様が弊社に対して個人情報を提出することは任意です。ただし、個人情報を提出されない場合には、弊社からの返信やサービスを実施ができない場合がありますので、あらかじめご了承ください。</p>
+
+          <h4>【個人情報の開示請求について】</h4>
+          <p>お客様には、貴殿の個人情報の利用目的の通知、開示、訂正、追加、削除および利用又は提供の拒否権を要求する権利があります。詳細につきましては下記の窓口までご連絡ください。</p>
+
+          <div class="company">
+            運営会社：株式会社リモージュ
+          </div>
+
+        </mat-card-content>
+      </mat-card>
+    </mat-tab>
+    <mat-tab label="ご利用規約">
+      <mat-card>
+        <mat-card-content>
+          <h1>ご利用規約</h1>
+          <h4>第1条(用語の定義)</h4>
+          <p>
+            「本サービス」とは、株式会社日本ラノス（https://www.lanos.co.jp/）（以下、「当社」といいます）が運営するインターネットサービス「Remoju」に関連して提供するウェブサイト、ソフトウェア、アプリケーションその他一切の製品およびサービスを指します。
+            本サービスにおける「投稿」とは、本サービスを通じて投稿された、テキスト、画像などのあらゆる情報を指します。「会員」とは、本サービスに会員登録をした者のことを指します。「利用者」とは、本サービスを利用するすべての者のことを指します。
+          </p>
+
+          <h4>第2条(規約への同意)</h4>
+          <p>本サービス利用者は、本サービスを利用し場合、Remoju利用規約に同意したものとみなされます。</p>
+
+          <h4>第３条（本規約の変更）</h4>
+          <p>
+            当社は、利用者に事前に通知することなく、本規約の全部又は一部を変更でき、また本規約を補充する規約や特約を新たに定めることができるものとします。規約の変更・追加は、本サービスのウェブサイトに掲載した時点から効力を発するものとし、その後利用者が本サービスを利用した場合には、改定後の利用規約に同意したものとみなされます。変更後の内容に同意できない場合、本サービスの利用を直ちに終了してください。
+          </p>
+
+          <h4>第４条（個人情報の利用）</h4>
+          <p>会員が当社に届け出たID、ユーザー名、アイコン、自己紹介文その他登録基本情報は、本サービスのウェブサイト・アプリ上で当社が定める期間公開され、利用者が自由に閲覧することができます｡
+            また、届け出た個人情報については会員本人のみが自由に編集することができ、その内容について起因する損害についても当社は一切の責任を負わないものとします。</p>
+
+          <h4>第5条（著作権の保護）</h4>
+          <p>
+            本サービスによって提供する情報や掲載されている文章・画像・動画・ロゴ・データ・ソフトウェア等の著作権、商標権その他一切の権利は、当社もしくは正当な権利者に帰属します。本サービスに掲載されている内容のすべてまたは一部については、事前の承諾なく、譲渡、編集、使用、複製、転載等をおこなうことはできません。
+          </p>
+
+          <h4>第6条(退会)</h4>
+          <p>
+            会員が本サービスの退会を希望する場合には、会員本人が所定の退会手続きを行うものとします。会員は、退会時に本サービス利用に関する一切の特典を失うものとします。また、本サービスを退会した場合も、会員がそれまでに投稿したコンテンツは削除されず、著作権を含むいっさいの権利は当社に移行します。それらを避けたい場合は、会員本人が退会前に投稿の削除等を自ら行うものとします。
+            また、当社は会員が退会した場合も当社が受領した有料コンテンツの料金その他の金員を返還しません｡</p>
+
+          <h4>第7条(免責)</h4>
+          <ol type="1">
+            <li>
+              当社は、本サービス内での投稿や広告を含むいかなる情報において、情報の正確性、違法性を確認、保証する義務を負わず、それらに起因する損害についても一切の責任を負わないものとします。本サービスからリンクされているウェブサイトおよび本サービス上に掲載されている広告からリンクされているウェブサイトについても、内容が正確であること、違法性がないこと、公序良俗に反する内容を含まないものであることなどを一切保証いたしません。
+            </li>
+            <li> 利用者は自らの責任において本サービスを利用し、本サービス上の行為に対する紛争や調整、損害賠償の請求などに関しては自らの費用と責任で対応するものとします。</li>
+            <li>
+              当社は、本サービスの文章、画像、その他一切のデータの保存に関して保証しないものとします。また、本サービスで保存されたデータの消失や変更に対する紛争、損害賠償に関しては一切を免責されるものとします。会員は、投稿した情報を自らの責任において保存・管理し、消失に備えるものとします。
+            </li>
+            <li>
+              当社は、投稿などに関し法令もしくは本規約に違反するおそれがあると当社が認めた場合、または業務上の必要性がある場合には、あらかじめ利用者に通知することなく、投稿を含むいっさいの情報を編集、削除することができます。それらに起因する損害についても一切の責任を負わないものとします。
+            </li>
+            <li>
+              当社は、利用者に事前に通知することなく、当社判断で、サービスの全部又は一部を一時中断あるいは廃止・停止および変更できるものとします。これにより利用者に損害等が発生したとしても、当社は一切責任を負わないものとします。
+            </li>
+            <li>
+              会員は、利用者IDと設定されたパスワードを管理する責任を負うものとし、これらを第三者に利用させてはならないものとします。パスワードの第三者による不正使用により会員に不利益または損害が発生したとしても、当社は一切責任を負わないものとします。
+            </li>
+            <li> 会員は、入会時において届け出た事項に変更が生じた場合には、速やかに会員情報の編集ページ等を通じて当社に通知しなければならないものとします。</li>
+          </ol>
+          <p>
+            会員が会員情報の変更届出を怠り当社からの通知が遅滞又は不到達となった場合にも、当該通知が到達したとみなされます。また、会員情報の変更届出を怠ったことによって会員に生じた損害について当社は一切の責任を負わないものとします。
+          </p>
+
+          <h4>第8条(位置情報について)</h4>
+          <p>本サービスでは、利用者の位置情報を当社が取得します。
+            また、取得した位置情報は本サービス内で使用され、第三者に提供される場合があります。それにより生じた損害について、当社は一切の責任を負わないものとします。</p>
+
+          <h4>第9条(投稿の権利について)</h4>
+          <p>会員による本サービスへの投稿についての権利は、会員が独自に作成した情報は投稿した会員に帰属します。
+            ただし、会員は、当社に対して、投稿を無償で日本の国内外において利用すること（媒体を問わず公開または頒布、インターネット配信、技術の進歩により将来生じうる一切の利用およびこれらに付随する複製、編集、改編、翻訳、翻案ならびにそれらのサブライセンス権を含みます。）を独占排他的に許諾します。なお、当社は、投稿を利用するにあたり投稿の全部または一部を、削除、改変、要約することができるものとします。また、会員は、当社又は当社から再利用許諾を受けた第三者に対して著作者人格権を行使しないものとします。
+          </p>
+
+          <h4>第10条(禁止行為)</h4>
+          <p>
+            当社は、会員および利用者が、本サービスの利用にあたって、以下の行為を行うことを禁じます。当社は、会員が下記のいずれかに該当したと判断した場合、事前の通知なく、会員資格の取消やサービスへのアクセスの拒否、将来に亘って当社が提供するサービスの利用を禁止することができることとし、
+            投稿の全部もしくは一部の削除、などの措置をとることができるものとします。その場合、当社はその理由を説明する義務を負わず、本条の措置により生じる一切の損害について責任を負わないものとします。</p>
+          <ol type="a">
+            <li> 当社が提供するアプリケーション、当社が保有するサーバー及びこれらが生成する情報、通信内容等の解読、解析、逆コンパイル、逆アセンブルまたはリバースエンジニアリング</li>
+            <li> 当社または第三者の権利（著作権、商標権その他の知的財産権、プライバシー権、肖像権その他法令上の権利を広く含む）を侵害する権利</li>
+            <li> 本サイトの趣旨から逸脱する投稿をする行為</li>
+            <li> 当社または第三者に対する誹謗中傷、脅迫、いやがらせ、名誉を毀損する行為</li>
+            <li> 公序良俗に反する情報を投稿する行為</li>
+            <li> 一般公開されていない個人宅の住所を掲載する行為</li>
+            <li> 法律上風俗営業に分類される店舗情報を掲載する行為</li>
+            <li> 特定の宗教や思想団体への勧誘を目的とする投稿や行為</li>
+            <li> 反社会的勢力に対する協力行為</li>
+            <li> 当社に対し虚偽の届出を行う行為</li>
+            <li> 迷惑メール、チェーンメール、ウィルス等有害なプログラム・スクリプト類を含むものを投稿または使用・送信する行為もしくは本サービスの円滑な運営やシステム等に影響を与える行為</li>
+            <li> 当社または第三者のサーバーに負担をかける行為もしくは攻撃する行為</li>
+            <li> 法令に違反する行為、またはその恐れがある行為</li>
+            <li> 他の利用者、第三者、または当社の名義を騙る投稿やなりすまし行為</li>
+            <li> 本サービスの趣旨に関係のない他人または団体の名称・メールアドレス・住所・電話番号等を投稿する行為</li>
+            <li> 犯罪的行為に結びつく投稿や行為</li>
+            <li> その他、当社が不適当と判断する行為</li>
+          </ol>
+
+
+          <h4>第11条(準拠法・裁判管轄)</h4>
+          <p>本規約は、日本法を準拠とし、解釈されるものとします。
+            また本サービスと利用者の間の訴訟が生じた場合、東京地方裁判所を第一審の専属管轄裁判所とします。</p>
+
+          <p>以上</p>
+        </mat-card-content>
+      </mat-card>
+    </mat-tab>
+  </mat-tab-group>
 </div>
-
