--- a/src/app/parts/nav-menu/nav-menu.component.html
+++ b/src/app/parts/nav-menu/nav-menu.component.html
@@ -8,8 +8,8 @@
     <div class="nav-wrap">
       <mat-nav-list class="language">
         <div class="switchViewLang" [ngClass]="{'en':lang==='en'}">
-          <input type="checkbox" id="switch-view1" (click)="onClickSwitchLang()">
-          <label for="switch-view1"><span></span></label>
+          <input type="checkbox" id="switch-view3" (click)="onClickSwitchLang($event)">
+          <label for="switch-view3"><span></span></label>
           <div id="swImg"></div>
         </div>
       </mat-nav-list>
