--- a/src/app/layout/header/header.component.scss
+++ b/src/app/layout/header/header.component.scss
@@ -263,3 +263,15 @@ $menu_line: 2px;
     }
   }
 }
+
+@media screen and (min-width: 1025px) {
+  header{
+    width: 1024px;
+    margin: auto;
+    margin-bottom: 10px;
+
+    .imgsp {
+      width: 10vw;
+    }
+  }
+}
