--- a/src/app/pages/planspot/components/planspot-list/planspot-list.component.scss
+++ b/src/app/pages/planspot/components/planspot-list/planspot-list.component.scss
@@ -1,25 +1,15 @@
-@media screen and (min-width: 415px) and (max-width: 1024px) { 
-  .box{
-    display: flow-root;
-  }
-}
-
-.box{
+.box {
   margin-top: 16px;
-  height: 100%;
-  overflow-y: scroll;
-  &::-webkit-scrollbar {
-    display: none;
-  }
-  
-  .glink{
+
+  .glink {
     background-color: #7E9E9F;
     padding: 3px 6px;
     margin: auto 3px;
     border-radius: 3px;
     color: #fff;
     text-decoration: none;
-    &::before{
+
+    &::before {
       content: "";
       display: inline-block;
       width: 14px;
@@ -31,9 +21,27 @@
   }
 }
 
-#nolist{
+@media screen and (min-width: 415px) and (max-width: 1024px) {
+  .box {
+    display: flow-root;
+  }
+}
+
+@media screen and (min-width: 1025px) {
+  .box {
+    height: 100%;
+    overflow-y: scroll;
+
+    &::-webkit-scrollbar {
+      display: none;
+    }
+  }
+}
+
+#nolist {
   padding: 0 16px 16px;
-  .mat-card-content{
+
+  .mat-card-content {
     font-size: 12px;
     text-align: center;
   }
