--- a/src/app/pages/myplan/myplan.component.scss
+++ b/src/app/pages/myplan/myplan.component.scss
@@ -192,6 +192,8 @@
 
           .mat-hint{
             color: #fff;
+            display: flex;
+            align-items: center;
             a{
               color: #fff;
               text-decoration: none;
@@ -592,6 +594,8 @@
             font-size: 16px!important;
             .mat-hint{
               color: #fff;
+              display: flex;
+              align-items: center;
               a{
                 color: #fff;
                 text-decoration: none;
