--- a/src/app/parts/memo-dialog/memo-dialog.component.scss
+++ b/src/app/parts/memo-dialog/memo-dialog.component.scss
@@ -61,6 +61,16 @@
             font-size: 9px;
           }
         }
+
+        .mat-hint{
+          //color: #fff;
+          display: flex;
+          align-items: center;
+          a{
+            color: #666;
+            text-decoration: none;
+          }
+        }
       }
     }
   
