--- a/src/app/pages/mypage-planlist/mypage-planlist.component.scss
+++ b/src/app/pages/mypage-planlist/mypage-planlist.component.scss
@@ -40,6 +40,7 @@
 
 .freesearch {
   width: 100%;
+
   // font-size: 75%;
   ::ng-deep .mat-form-field-placeholder {
     color: red;
@@ -217,6 +218,7 @@
       float: right;
       // margin-top: -10px;
       margin-top: 10px;
+
       // opacity: 0.5;
       .mat-list-item {
         display: inline-block;
@@ -271,7 +273,7 @@
 .thumbmain {
   //display: inline-flex !important;
 
-  > img {
+  >img {
     width: 100%;
     // height: 66.6vw;
     object-fit: cover;
@@ -285,7 +287,7 @@
   margin-right: 10px;
   margin-bottom: 10px;
 
-  > img {
+  >img {
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -297,7 +299,7 @@
   margin-right: 10px;
   margin-bottom: 10px;
 
-  > p {
+  >p {
     line-height: 1.5;
   }
 }
@@ -311,6 +313,7 @@
   line-height: 1.8;
   text-align: justify;
   text-justify: inter-ideograph;
+
   // color: #4d4d4d;
   // font-size: 14px;
   table {
@@ -347,6 +350,7 @@
     line-height: 1;
   }
 }
+
 // spot detailからコピー ここまで
 
 ::ng-deep .ngx-pagination {
@@ -354,7 +358,7 @@
   font-size: 70%;
   padding: 10px 0;
   margin-left: 0;
-  margin-bottom: 0!important;
+  margin-bottom: 0 !important;
 
   background-color: #f6f6f6;
 
@@ -362,14 +366,14 @@
   justify-content: space-around;
   align-items: center;
 
-  li{
+  li {
     background: #fff;
-    border-radius: 18px!important;
+    border-radius: 18px !important;
     color: #bebbb9;
     width: 25px;
     text-align: center;
 
-    a{
+    a {
       color: #bebbb9;
       padding: 0.1875rem;
     }
@@ -384,11 +388,11 @@
     text-align: center;
     font-weight: bold;
     background: #f6f6f6 !important;
-    color: #5e5e5e!important;
+    color: #5e5e5e !important;
     margin-top: 1px;
   }
 
-  .ellipsis{
+  .ellipsis {
     background: #f6f6f6 !important;
   }
 
@@ -397,19 +401,20 @@
     font-size: 20px;
   }
 
-  .pagination-previous a::before{
-    content:url('../../../assets/img/&lts.svg')!important;
+  .pagination-previous a::before {
+    content: url('../../../assets/img/&lts.svg') !important;
     width: 4px;
     height: 10px;
   }
 
-  .pagination-next a::after{
-    content:url('../../../assets/img/&gts.svg')!important;
+  .pagination-next a::after {
+    content: url('../../../assets/img/&gts.svg') !important;
     width: 4px;
     height: 10px;
   }
 
-  .pagination-previous,.pagination-next{
+  .pagination-previous,
+  .pagination-next {
     padding: 0.2rem !important;
     border-radius: 18px;
     height: 18px;
@@ -419,7 +424,7 @@
     background: #fff;
     position: relative;
 
-    >a{
+    >a {
       padding: 0.1875rem 0.375rem;
       position: absolute;
       top: -10px;
@@ -682,12 +687,13 @@ span.sortlink {
   }
 }
 
-.box{
+.box {
   margin-top: 16px;
-  ::ng-deep .mat-card{
+
+  ::ng-deep .mat-card {
     padding: 0;
 
-    .card-box{
+    .card-box {
       border: #edeae8 solid 1px;
       border-radius: 10px;
       overflow: hidden;
@@ -697,8 +703,8 @@ span.sortlink {
       margin-right: 12px;
       margin-left: 12px;
 
-      .pics{
-        ::ng-deep.owl-carousel{
+      .pics {
+        ::ng-deep.owl-carousel {
           margin: 2px 0px 12px 10px;
           padding: 0;
 
@@ -758,42 +764,48 @@ span.sortlink {
         }
       }
 
-      .mat-list{
+      .mat-list {
         padding-top: 0;
 
-        ::ng-deep .mat-list-item{
+        ::ng-deep .mat-list-item {
           height: auto;
           font-size: 11px;
           color: #5e5e5e;
 
-          .mat-list-item-content{
+          .mat-list-item-content {
             padding: 0 10px;
           }
 
-          &.top{
+          &.top {
             margin: 10px 0 4px;
-            .mat-list-item-content{
+
+            .mat-list-item-content {
               justify-content: space-between;
-              align-items:end;
-              .lt{
+              align-items: end;
+
+              .lt {
                 display: flex;
-                
-                .areaName{
+
+                .areaName {
                   border: 1px solid #5e5e5e;
                   padding: 0 4px;
                   border-radius: 3px;
                   margin-right: 10px;
                 }
               }
-              .rt{
+
+              .rt {
                 display: flex;
                 align-items: center;
-                .release{
+
+                .release {
                   width: 80px;
                 }
-                .delete{
+
+                .delete {
                   margin-left: 0.5em;
-                  .deletePlan{
+
+                  .deletePlan {
                     //position: absolute;
                     //z-index: 1;
                     // top: -13px;
@@ -807,7 +819,7 @@ span.sortlink {
                     width: 24px;
                     height: 24px;
 
-                    > i {
+                    >i {
                       color: #fff;
                       font-size: 15px;
                     }
@@ -818,29 +830,31 @@ span.sortlink {
             }
           }
 
-          &.planname{
-            span{
+          &.planname {
+            span {
               font-size: 13px;
               color: #232323;
             }
           }
 
-          &.timereq{
+          &.timereq {
             margin: 3px 0 6px;
-            .spotqty{
+
+            .spotqty {
               margin-left: 15px;
             }
           }
 
-          &.bottom{
+          &.bottom {
             font-size: 10px;
             line-height: 2;
-            .mat-list-item-content{
+
+            .mat-list-item-content {
               padding: 0 12px 12px;
               justify-content: flex-end;
             }
 
-            .edit-to-plan{
+            .edit-to-plan {
               color: #fff;
               font-size: 13px;
               font-weight: 700;
@@ -854,7 +868,7 @@ span.sortlink {
               padding: 0;
             }
 
-            .share{
+            .share {
               color: #bfa060;
               font-size: 13px;
               font-weight: 700;
@@ -867,10 +881,11 @@ span.sortlink {
               white-space: nowrap;
               padding: 0;
 
-              .mat-icon{
+              .mat-icon {
                 font-size: 16px;
                 height: 19px;
               }
+
               //margin-top: $mtop;
               // display: flex;
               // flex-direction: column;
@@ -885,13 +900,8 @@ span.sortlink {
               // }
             }
           }
-
-
         }
       }
     }
-
   }
-
-
 }
