--- a/src/app/parts/review-post-dialog/review-post-dialog.component.scss
+++ b/src/app/parts/review-post-dialog/review-post-dialog.component.scss
@@ -31,7 +31,7 @@
     display: block;
     width: 100%;
     position: relative;
-    min-height: 0;
+    min-height: 68px;
 
     &.bottom{
       margin-top: 0.5em;
