--- a/src/app/parts/review-post-dialog/review-post-dialog.component.scss
+++ b/src/app/parts/review-post-dialog/review-post-dialog.component.scss
@@ -78,7 +78,7 @@
 
   mat-dialog-content{
     //min-height: 70vw;
-    max-height: 75vh;
+    //max-height: 75vh;
     
     .header{
       border-bottom: 1px solid #bfa060;
