--- a/src/app/parts/review-post-dialog/review-post-dialog.component.scss
+++ b/src/app/parts/review-post-dialog/review-post-dialog.component.scss
@@ -5,6 +5,7 @@
   padding: 12px!important;
   overflow: unset;
   min-height: 97vh;
+  padding-top: 0;
 
   form{
     padding: 16px;
@@ -29,9 +30,10 @@
     margin: 0;
     padding: 0;
     display: block;
+
     width: 100%;
     position: relative;
-    min-height: 68px;
+    //min-height: 68px;
 
     &.bottom{
       margin-top: 0.5em;
