--- a/src/app/parts/nav-menu/nav-menu.component.scss
+++ b/src/app/parts/nav-menu/nav-menu.component.scss
@@ -6,6 +6,7 @@
   //background-color: $color-remoju;
   //color: #fff;
   background-color: #fff;
+
   .navbar-header {
     // padding: 15px 10px;
     padding: 8px 8px 0;
@@ -19,7 +20,7 @@
       margin-left: 10px;
     }
 
-    @media screen and (min-width: 415px) and (max-width: 1024px) { 
+    @media screen and (min-width: 415px) and (max-width: 1024px) {
       img {
         margin-top: -0.3vw;
         margin-left: 2vw;
@@ -31,37 +32,40 @@
   .nav-wrap {
     padding: 0 20px;
 
-    .mat-nav-list{
+    .mat-nav-list {
       padding-top: 0;
-      .header{
+
+      .header {
         font-size: 16px;
         line-height: 40px;
         margin-top: 12px;
         border-bottom: 1px solid $color-gold;
       }
+
       .mat-list-item {
         font-size: 13px;
         height: 31px;
-  
+
         .mat-list-item-content {
           padding: 0;
         }
-  
-        
+
+
       }
-      &.sub{
+
+      &.sub {
         padding-top: 0;
         margin-left: 13px;
       }
 
-      &.language{
+      &.language {
         display: flex;
-        justify-content: end;
+        justify-content: flex-end;
         margin-bottom: 1em;
         @include switchViewLang();
       }
     }
-    
+
 
     .title {
       margin: auto -20px;
@@ -83,7 +87,7 @@
         margin-block-end: 0;
       }
 
-      .logout{
+      .logout {
         display: flex;
         align-items: center;
         justify-content: space-between;
